2007-07-05  Carlos Alberto Cortez <calberto.cortez@gmail.com>

	* ListView.cs: Implement the so-incredibly broken 2.0 
	VirtualItemsSelectionRangeChanged event.

2007-07-05  Carlos Alberto Cortez <calberto.cortez@gmail.com>

	* ListView.cs: When enter is pressed and selection is non empty,
	an OnItemActivate event must be fired.

2007-07-05  Carlos Alberto Cortez <calberto.cortez@gmail.com>

	* ListView.cs: Store the FocusedItem information as an
	int instead of a ListViewItem (needed by VirtualMode).
	Update the calls to SetFocusedItem to pass an index instead of
	an item.
	* ListViewItem.cs: Likewise. Also, in VirtualMode retrieve
	the Focused state from the owner ListView. 

2007-07-04  Carlos Alberto Cortez <calberto.cortez@gmail.com>

	* ListView.cs: Set ListView.focused_item from ListViewItem.Focused
	property. Also, invalidate previous focused item in the mentioned
	property (match .Net).

2007-07-04  Carlos Alberto Cortez <calberto.cortez@gmail.com>

	* ListView.cs: Implement 2.0 FocusedItem property setter.

2007-07-03  Carlos Alberto Cortez <calberto.cortez@gmail.com>

	* ListView.cs: Implement 2.0 TopItem property setter.

2007-07-03  Jonathan Pobst  <monkey@jpobst.com>

	* StatusStrip.cs: The default renderer is System.
	* ToolStrip.cs, ToolStripManager: Now that we have System renderer, use it 
	if the user specifies it.
	* ToolStripDropDown.cs: Don't reset our Renderer on changing OwnerItem
	if we are ManagerRenderMode.
	* ToolStripMenuItem.cs: Calculate our text color better.
	* ToolStripRenderer.cs, ToolStripProfessionalRenderer.cs: Move some stuff
	from Professional to the base class based off working with the System renderer.
	* ToolStripSystemRenderer.cs: Added.

2007-07-02  Carlos Alberto Cortez <calberto.cortez@gmail.com>

	* ListView.cs: I'm so lame - the real name is HitTest, not HitInfo.

2007-07-02  Jonathan Pobst  <monkey@jpobst.com>

	* ToolTip.cs: Implement 2.0 Tag property.

2007-06-25  Carlos Alberto Cortez <calberto.cortez@gmail.com>
